fixed the bug in forecast section, refactored for readability and cleaned unnecessary UI elements

--- a/src/css.css
+++ b/src/css.css
@@ -1,34 +1,33 @@
 body {
-  font-family: "Roboto", serif;
-  background-color: #3b4552;
-  color: #c3cad5;
+  font-family: "Noto Sans", sans-serif;
+  background-color: #000000;
+  color: white;
   font-size: 10px;
 }
 .weather_app {
-  margin: 20px auto;
-  padding: 25px;
+  margin: 30px auto;
+  padding: 15px;
   border-radius: 7px;
   max-width: 800px;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-  background-color: #0b131e;
+  background-color: #051a3f;
 }
 
 .input-search {
   border: none;
-  padding: 5px 15px;
+  padding: 15px 15px;
   width: 80%;
   border-radius: 10px;
-  background-color: #202b3b;
+  background-color: #000000;
   color: white;
 }
 .submit-search {
-  padding: 5px 15px;
-  border-radius: 5px;
+  padding: 15px 15px;
+  border-radius: 10px;
   border: none;
   color: white;
-  background-color: #202b3b;
+  background-color:  #000000;
   width: 19%;
-  margin-left: 4px;
 }
 main {
   display: flex;
@@ -38,13 +37,13 @@ main {
 .weather-details {
   display: flex;
   flex-direction: column;
+  gap: 10%;
   width: 70%;
 }
 .weather-data {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  padding: 10px;
+  justify-content: space-around;
 }
 .temperature {
   font-size: 40px;
@@ -56,13 +55,8 @@ main {
   height: 100%;
 }
 
-.todays-forcast {
-  background-color: #202b3b;
-  border-radius: 10px;
-  padding: 10px;
-}
 .daytimeBox {
-  border-right: 1px solid gray;
+  border-right: 2px solid white;
   padding: 0 10px;
   text-align: center;
   font-size: 12px;
@@ -77,14 +71,14 @@ main {
 }
 .air-conditions {
   margin-top: 10px;
-  background-color: #202b3b;
+  background-color:  #000000;
   border-radius: 10px;
   padding: 10px;
 }
 .seven-day-forcast {
-  background-color: #202b3b;
+  background-color:  #000000;
   width: 30%;
-  margin: 10px 0 0 10px;
+  margin: 0 0 0 10px;
   padding: 10px;
   border-radius: 10px;
 }
@@ -111,7 +105,7 @@ main {
 }
 .forcastday {
   height: 100%;
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid white;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
